--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'org.beryx.jlink' version '2.24.1'
 }
 
+
 group 'com.HKRSDGroup'
 version '1.0-SNAPSHOT'
 
@@ -41,6 +42,8 @@ dependencies {
     implementation('eu.hansolo:tilesfx:11.48') {
         exclude(group: 'org.openjfx')
     }
+
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
