--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     }
 
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'
+    implementation 'commons-dbutils:commons-dbutils:1.7'
+
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
