--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,8 @@ ext {
     junitVersion = '5.8.1'
 }
 
-sourceCompatibility = '11'
-targetCompatibility = '11'
+sourceCompatibility = "15"
+targetCompatibility = "15"
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
