--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id 'org.beryx.jlink' version '2.24.1'
 }
 
-
 group 'com.HKRSDGroup'
 version '1.0-SNAPSHOT'
 
@@ -17,8 +16,11 @@ ext {
     junitVersion = '5.8.1'
 }
 
-sourceCompatibility = "11"
-targetCompatibility = "11"
+sourceCompatibility = "17"
+targetCompatibility = "17"
+
+mainClassName = 'com.hkrsdgroup.agileproduct.Main'
+
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -30,22 +32,19 @@ application {
 }
 
 javafx {
-    version = '11.0.2'
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web']
+    version = '17.0.1'
+    modules = ['javafx.controls', 'javafx.fxml']
 }
 
 dependencies {
+    implementation('org.controlsfx:controlsfx:11.1.0')
     implementation('com.dlsc.formsfx:formsfx-core:11.3.2') {
         exclude(group: 'org.openjfx')
     }
     implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
-    implementation('eu.hansolo:tilesfx:11.48') {
-        exclude(group: 'org.openjfx')
-    }
 
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'
     implementation 'commons-dbutils:commons-dbutils:1.7'
-
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
@@ -56,7 +55,7 @@ test {
 }
 
 jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
+    imageZip.set(project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip"))
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'app'
@@ -66,3 +65,13 @@ jlink {
 jlinkZip {
     group = 'distribution'
 }
+
+//jar {
+//    manifest {
+//        attributes 'Main-Class': mainClassName
+//    }
+//    from {
+//        files(configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) })
+//    }
+//    duplicatesStrategy = 'exclude'
+//}
